28 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/TempAnnotationController.php:
 * backend/clarin/app/Models/TempAnnotation.php:
 * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/services/text-widget/text-widget.service.ts: Backend
 Annotation services now return all Annotation attributes from the MongoDB.

 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * backend/clarin/app/Http/Controllers/UserController.php:
 * frontend/clarin/js/services/userService.js: Fixed logout in both frontends
 to call the correct backend service.

 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
 Fixes in selection of Collections and errors after deleting a Collection.

 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/DocumentController.php: Fixed bugs when
 importing old exports.

27 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
 All functionality tested.

 * clarin-angular/src/app/components/dialogs/import-modal/import-modal.component.html:
 * clarin-angular/src/app/components/dialogs/import-modal/import-modal.component.ts:
 * clarin-angular/src/app/services/annotation-service/annotation.service.ts:
 * clarin-angular/src/app/services/collection-service/collection-service.service.ts:
 * clarin-angular/src/app/services/document-service/document.service.ts: